mypod-loadbalancer.yml
apiVersion: v1
kind: Service
metadata: 
  name: mywebservice-lb   # giving service name for creating loadbalancer service
  labels:
    app: mywebapp-lb  # giving label name for the loadbalancer service 
spec: 
  type: LoadBalancer  # creating LoadBalancer service 
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: mywebapp   # pod label name while creating the pod  (by using replicaset or deployment)
